--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
+    "lenis": "^1.0.45",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
