--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
+    "lucide-react": "^0.380.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
