--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
     "lucide-react": "^0.380.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.2.1",
     "sass": "^1.77.4",
     "tailwind-merge": "^2.3.0",
@@ -34,7 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.5.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
