--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
     "install:vercel": "npm i --legacy-peer-deps"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
+    "@modelcontextprotocol/sdk": "^1.17.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@studio-freight/lenis": "^1.0.42",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@vercel/mcp-adapter": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
     "lucide-react": "^0.380.0",
+    "motion": "^12.23.12",
     "next": "^15.5.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "redis": "^5.8.2",
     "sass": "^1.77.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.167.0"
+    "three": "^0.167.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20",
